# spoLab3

./: CMakeLists.txt
client/: client.c  client.h  client_main.c  ui.c  ui.h
server/: server.c  server.h  server_main.c  server_ui.c  server_ui.h
utils/: const.h  linked_list.c  linked_list.h  message.c  message.h  ui_list.c  ui_list.h
utils/ui/: textfield.c  textfield.h  ui_list.c  ui_list.h  ui_utils.c  ui_utils.h
