cmake_minimum_required(VERSION 3.19)
project(spoLab3 C)

set(CMAKE_C_STANDARD 99)
find_package(Threads REQUIRED)
find_package(Curses REQUIRED)
add_executable(client server/server.c server/server.h utils/linked_list.c utils/linked_list.h client/client.c client/client.h utils/message.c utils/message.h utils/const.h client/ui.c client/ui.h utils/ui/ui_list.c utils/ui/ui_list.h utils/ui/textfield.c utils/ui/textfield.h utils/ui/ui_utils.c utils/ui/ui_utils.h)
add_executable(server server/server.c server/server.h utils/linked_list.c utils/linked_list.h client/client.c client/client.h utils/message.c utils/message.h utils/const.h server/server_main.c utils/ui/ui_list.c utils/ui/ui_list.h server/server_ui.c server/server_ui.h utils/ui/ui_utils.c utils/ui/ui_utils.h)
target_link_libraries(server ${CURSES_LIBRARIES})
target_link_libraries(server Threads::Threads)
target_link_libraries(client ${CURSES_LIBRARIES})
target_link_libraries(client Threads::Threads)